src/main/kotlin/com/example/demka/shared/errors/common/AlreadyExistsError.kt
package ru.umom.hackaton.shared.errors.common

class AlreadyExistsError(override val message: String) : RuntimeException()